Sigil v0.1.6 <ADD_DATE>
    - implemented "blockquote" support through new WYSIWYG actions: "indent less" and
    "indent more" (issue #41)
    - updating Qt fixed an issue with images wrapped in SVG tags not being shown (issue #91)
    - updated Qt from 4.5.2 to 4.6.0
    - fixed an issue with regex matching in Code View when such regexes referenced line
    endings with "\n" (issue #182)
    - PageUp and PageDown keys now work in Book View (issue #130)
    - fixed a crash invoked on switching views and searching in Book View when the caret 
    element's parent has HTML comment children (issue #179)
    - "Replace All" is now treated as a single undo/redo operation *in Code View*
    - tentatively fixed a problem with bad TOC generation if the input file had multiple headings
    with the same ID (across XHTML files) (issue #177)
    - fixed a regression that was causing crashes when switching views

Sigil v0.1.5 2009.11.25
    - fixed a race condition with view syncing in Book View
    - fixed an issue with loading text files that don't end with a newline (some text would end up missing)
    - A NEW FIND & REPLACE DIALOG (issue #13)
    - no more hard line breaks in Code View (courtesy of recent performance optimisations) (issue #61)
    - TOC Editor now remembers its size across invocations and program launches
    - the uninstaller now removes Sigil's temporary working directories 
    - removed the "Start Sigil" checkbox in the last page of the installer; starting Sigil like this
    was causing problems because Sigil had admin privileges (issue #163)
    - fixed an issue with chapter breaks not working after they are Left/Center/Right Aligned (issue #158)
    - multiple images can now be inserted with the "Insert Image" dialog by selecting multiple images 
    - fixed an issue with loading images from documents with uppercase tags and attributes (issue #156)
    - tentatively fixed an issue with Sigil crashing on overwriting existing epubs (issue #146)